Rest: settings - epoch_stability_depth added
